# libpointmatcher

./: .gitignore  README.md
explanation/: Explanations.odt
filters/: CMakeLists.txt  CMakeLists.txt~  filter1.cpp
filters_paraview/: display_matches.cpd  display_points1.cpd  display_points2.cpd
icp/: CMakeLists.txt  icp_complete.cpp  icp_complete_evaluation.cpp  icp_simple.cpp  icp_without_config_file.cpp  main_save.cpp  save_icp_debug_16.26
icp/build-icp_debug-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  icp_configuration.yaml  icp_debug  icp_debug.cbp  test_icp.cbp
icp/icp_debug/: CMakeLists.txt  main.cpp  main.cpp.autosave
iterated_registration/build-iterated_registration-Basic-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  convert_matches_to_csv  iterated_registration  matches1011.csv  matches109.csv  matches1112.csv  matches1312.csv  matches23.csv  matches34.csv  matches45.csv  matches65.csv  matches76.csv  matches78.csv  matches98.csv  matches_src10_tgt11.csv  matches_src10_tgt9.csv  matches_src11_tgt12.csv  matches_src13_tgt12.csv  matches_src2_tgt3.csv  matches_src3_tgt4.csv  matches_src4_tgt5.csv  matches_src6_tgt5.csv  matches_src7_tgt6.csv  matches_src7_tgt8.csv  matches_src9_tgt8.csv
iterated_registration/build-iterated_registration-Basic-Default/configuration/: filters_configuration.yaml  icp_configuration.yaml  icp_configuration1.yaml
iterated_registration/build-iterated_registration-Basic-Default/result_095_5_003/: matches23.csv  matches34.csv  matches45.csv  matches65.csv  matches76.csv  matches78.csv
iterated_registration/iterated_registration/: CMakeLists.txt  main.cpp
metascan_registration/: CMakeLists.txt  metascan_registration.cpp
registration/: CMakeLists.txt  registration.cpp
